modify build scripts and components for asset referencing and update test index

--- a/test.html
+++ b/test.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Angular Elements</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./test/styles.css">
 </head>
 <body>
-    <test-custom test="asdasd_test"></test-custom>
-    <script type="text/javascript" src="./test-custom.js"></script>
+    <test-custom base="test/" test="asdasd_test"></test-custom>
+    <script type="text/javascript" src="./test/test-custom.js"></script>
 </body>
 </html>
